--- a/config/scaffolding/SiqagitAWSPP2507Project.yml
+++ b/config/scaffolding/SiqagitAWSPP2507Project.yml
@@ -36,6 +36,22 @@ services:
     version: 10.3.0.0.34
     wpmServer: https://packages.webmethods.io
     wpmRegistry: licensed
+- serviceName: project.siqagitawspp2507.integrations:JMS_JNDI_SSL
+  packages:
+  - name: SiqagitAWSPP2507Project
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
+- serviceName: publisher:publisher
+  packages:
+  - name: JMSTest
+    version: "1.0"
+- serviceName: pub.jms:send
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2061
 - serviceName: project.siqagitawspp2507.integrations:SIQAAdapterFlow
   packages:
   - name: SiqagitAWSPP2507Project
