--- a/config/scaffolding/SiqagitAWSPP2507Project.yml
+++ b/config/scaffolding/SiqagitAWSPP2507Project.yml
@@ -36,7 +36,7 @@ services:
     version: 10.3.0.0.34
     wpmServer: https://packages.webmethods.io
     wpmRegistry: licensed
-- serviceName: project.siqagitawspp2507.integrations:JMS_JNDI_SSL
+- serviceName: project.siqagitawspp2507.integrations:JMSFlowTest
   packages:
   - name: SiqagitAWSPP2507Project
     version: "1.0"
@@ -52,6 +52,14 @@ services:
   packages:
   - name: WmPublic
     version: 11.1.0.0.2061
+- serviceName: project.siqagitawspp2507.integrations:JMS_JNDI_SSL
+  packages:
+  - name: SiqagitAWSPP2507Project
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
 - serviceName: project.siqagitawspp2507.integrations:SIQAAdapterFlow
   packages:
   - name: SiqagitAWSPP2507Project
