--- a/config/scaffolding/SiqagitAWSPP2507Project.yml
+++ b/config/scaffolding/SiqagitAWSPP2507Project.yml
@@ -68,6 +68,22 @@ services:
     version: 10.3.0.0.34
     wpmServer: https://packages.webmethods.io
     wpmRegistry: licensed
+- serviceName: project.siqagitawspp2507.integrations:SSL_JDBC_test
+  packages:
+  - name: SiqagitAWSPP2507Project
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
+- serviceName: SSL_JDBC_Test.services:insert_ssl
+  packages:
+  - name: SSL_JDBC_Test
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
 - serviceName: project.siqagitawspp2507.integrations:gitsync
   packages:
   - name: SiqagitAWSPP2507Project
