--- a/config/scaffolding/SiqagitAWSPP2507Project.yml
+++ b/config/scaffolding/SiqagitAWSPP2507Project.yml
@@ -21,6 +21,11 @@ packages:
   gitUrl: https://github.com/prabhakarsag
   gitUsername: prabhakarsag
   gitBranch: main
+- name: JMSTest
+  gitServerName: prabhakarsag
+  gitUrl: https://github.com/prabhakarsag
+  gitUsername: prabhakarsag
+  gitBranch: main
 services:
 - serviceName: project.siqagitawspp2507.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:Database_1
   packages:
@@ -128,9 +133,9 @@ configurationVariables:
   ? artConnection.SiqagitAWSPP2507Project.project.siqagitawspp2507.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_1.connectionManagerSettings.minimumPoolSize
   : "1"
   jdbc.jdbcTestPool.waitingThread: "0"
-  jdbc.jdbcTestPool.minConns: "0"
   ? artConnection.SiqagitAWSPP2507Project.project.siqagitawspp2507.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_1.connectionSettings.portNumber
   : "3306"
+  jdbc.jdbcTestPool.minConns: "0"
   ? artConnection.SiqagitAWSPP2507Project.project.siqagitawspp2507.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_1.connectionSettings.serverName
   : 9.46.196.248
   ? artConnection.SiqagitAWSPP2507Project.project.siqagitawspp2507.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_1.connectionSettings.transactionType
